# graph_processor

./: .dockerignore  Dockerfile  README  docker-compose.yml  pyproject.toml  sample_input.json  sample_invalid_graph.xml  sample_valid_graph.xml
src/: config.py  main.py
src/db/: _init__.py  database.py  models.py
src/db/migrations/: 01_create_schema.sql  02_create_cycle_detection.sql
src/graph/: cycle_detector.py  path_finder.py
src/utils/: exceptions.py
src/xml_processor/: parser.py
tests/: conftest.py  test_cycle_detection.py  test_path_finder.py  test_xml_files.py
