[tool.poetry]
name = "graph-processor"
version = "0.1.0"
description = "Graph processing service with XML input and JSON output"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.9.3"
psycopg2-binary = "^2.9.9"
SQLAlchemy = "^2.0.23"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.0"
networkx = "^3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
ipdb = "^0.13.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"